--- a/login.html
+++ b/login.html
@@ -4,15 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub</title>
+    <title>Login</title>
 </head>
 
 <body>
 
-    <h1>This is my app!</h1>
-    <span>Login Form</span>
+    <h1>Login page</h1>
 
-    <script src="app.js"></script>
 </body>
 
 </html>
